--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"> </link>
         <link rel="stylesheet" type="text/css" href="css/style.css"> </link>
     </head>
-    <body>
+    <body id="pagHome">
         
         <nav class="nav nav-pills flex-column flex-sm-row">
             <a class="flex-sm-fill text-sm-center nav-link active" href="#">Home</a>
