[FEAT] inclusao do login 2

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
             <a class="flex-sm-fill text-sm-center nav-link " href="#">Historia</a>
             <a class="flex-sm-fill text-sm-center nav-link " href="#">Personagens</a>
             <a class="flex-sm-fill text-sm-center nav-link " href="cadastro.html">Cadastro</a>
+            <a class="flex-sm-fill text-sm-center nav-link " href="login.html">Login</a>
           </nav>
+
   
     </body>
     
