--- a/cadastro.html
+++ b/cadastro.html
@@ -68,7 +68,7 @@
         </form>
 
         <footer id=rodape>
-                <p> © 2019 Hortaliças Games, inc. Todos os direitos reservados </p>
+                <p> © 2019 Hortaliças Games, inc. Todos os direitos reservados laal</p>
         </footer>
     </body>
 </html>
