--- a/cadastro.html
+++ b/cadastro.html
@@ -4,7 +4,10 @@
         <meta charset="utf-8">
         <title> Cadastro</title>
         <link rel="stylesheet" type="text/css" href="css/style.css"></link>
-        <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"> </link>   
+        <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"> </link> 
+        <script type="text/javascript" src="funcoes.js">
+        	
+        </script>  
     </head>
     <body id=pagCadastro>
             <nav class="nav nav-pills flex-column flex-sm-row">
@@ -38,7 +41,7 @@
         <!--CPF-->
             <div class="form-group col-md-6">
                 <label for="inputCpf"> CPF</label>
-                <input type="number" class="form-control" id="inputCpf" placeholder="CPF">
+                <input type="text" class="form-control" id="inputCpf" name="strCPF" placeholder="CPF">
             </div>
         <!--Numero de telefone-->
             <div class="form-group col-md-6">
@@ -62,13 +65,14 @@
            </div>
 
            <div >
-                <input type="submit" a href="index.html" >
+                <input type="submit" a href="index.html" onclick="TestaCPF(strCPF.value)">
            </div>
+
  
         </form>
 
         <footer id=rodape>
-                <p> © 2019 Hortaliças Games, inc. Todos os direitos reservados laal</p>
+                <p> © 2019 Hortaliças Games, inc. Todos os direitos reservados</p>
         </footer>
     </body>
 </html>
