[FEAT] iNCLUSAO CPF E CADASTRO

--- a/cadastro.html
+++ b/cadastro.html
@@ -18,7 +18,7 @@
             </nav>
         <!--cabeçalho-->
         <header id="cabeçalho"> 
-        </h1> Preenchimento de formulario </h1>
+        </h1> Formulário </h1>
         </header>
         <!--Formulario-->
         <form>
